--- a/html/1. syntax.html
+++ b/html/1. syntax.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <!--주석 : 브라우저가 해석하지 않는다. -->
     <!--1. 여는 태그와 닫는 태그 쌍으로 작성. -->
     <a href="">yahoo</a>
-    
+
     <!--2. 닫는 태그가 필요없는 태그도 존재한다. -->
-    <input type="text">
+    <input type="text" />
 
     <!--3. 태그는 중첩해서 사용이 가능하다. -->
     <p>
-        태그는 <b>중첩</b>해서 사용하는 것이 가능하다.
-        여러줄...
+      태그는
+      <b>중첩</b>
+      해서 사용하는 것이 가능하다. 여러줄...
     </p>
 
     <!--4. html에서는 공백을 아무리 많이 넣어도 한 칸으로 띄어진다. -->
 
     <p>p태그는 문단을 의미합니다. 여러 줄로 작성을 하면 어떻게 나올까요?</p>
     <p>
-    <span>        안녕</span>
-    <span>안녕하세요</span>
+      <span>안녕</span>
+      <span>안녕하세요</span>
     </p>
 
     <!--
@@ -39,5 +39,11 @@
     <a href="https://naver.com">네이버</a>
     <audio src="" autoplay loop></audio>
 
-</body>
+    <h1>HTML</h1>
+    <p>
+      HTML은
+      <b>Hyper Text Markup Language</b>
+      의 줄임말입니다.
+    </p>
+  </body>
 </html>
