--- a/html/5. table.html
+++ b/html/5. table.html
@@ -95,5 +95,30 @@
         </tr>
       </tbody>
     </table>
+
+    <p></p>
+
+    <h1>상품 구성</h1>
+    <table>
+      <caption>선물용과 가정용 상품 구성</caption>
+
+      <thead>
+        <tr>
+          <th>용도</th>
+          <th>중량</th>
+          <th>개수</th>
+          <th>가격</th>
+        </tr>
+        <tr>
+          <td rowspan="2">선물용</td>
+          <td>3kg</td>
+          <td>11~16과</td>
+          <td>35,000원</td>
+        </tr>
+        <tr>
+          <td rowspan="2">가정용</td>
+        </tr>
+      </thead>
+    </table>
   </body>
 </html>
