--- a/html/3. text.html
+++ b/html/3. text.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- 
+    블록 레벨 요소(Block Level Element) : 줄바꿈 o, 가로 너비 화면을 다 차지 => 영역을 나눌 때
+    인라인 레벨 요소(Inline Level Element) : 줄바꿈x, 자기가 가진 컨텐츠만큼만 너비를 차지. => 실질적인 컨텐츠
+   -->
     <!-- <h1> ~ <h6> : h는 heading의 줄임말. 제목에 사용.
         숫자가 낮을 수록 더 중요. h1 태그는 문서에서 하나만 사용. 줄바꿈 일어남.-->
     <h1>HTML</h1>
