--- a/1.html/7.link.html
+++ b/1.html/7.link.html
@@ -25,6 +25,10 @@
 
     <h2 style="margin-top: 500px;" id="title">여기로 이동!</h2>
 
+    <a href="https://www.google.com">
+      <img src="/assets/32320_21987_1540.jpg" alt="" />
+    </a>
+
     <!-- 메인 페이지 => html, css, js에 대한 설명을 적은 페이지로 이동-->
   </body>
 </html>
