--- a/1.html/8.form.html
+++ b/1.html/8.form.html
@@ -13,6 +13,7 @@
          name: 서버에 데이터를 보낼 때 데이터의 이름을 지정.
          autofocus: 웹 문서 실행 시 포커스를 지정. 1개만 지정해야한다.
          disabled : 입력을 비활성화한다.
+         required : 미입력시 유효성 검사에 걸린다.
     -->
     <input type="text" />
     <p></p>
@@ -25,12 +26,41 @@
 
     -->
 
-    <form action="/server">
+    <!--
+              <form> : 서버에 작성한 양식(데이터)을 보낼 때 사용. 
+                  => <form> 안에 <button> 클릭시 자동으로 동작.
+              action : 데이터에 전송할 서버를 지정.
+                  => <form 안에서 enter 키 입력 시 sumit(전송)
+              method : 데이터 전송 방법을 지정.
+                  => get은 정보 받아올 때 사용. 주소창에 input 값 노출. 노출돼도 상관없는 정보만 나와야한다.
+                  => post 서버에 데이터를 등록할 때 사용. 주소창에 데이터 노출 X
+              novalidate : 지정시 유효성 검사를 건너뛴다.
+              autocomplete : 자동완성 여부를 "on" 혹은 "off"로 지정할 수 있다.
+     -->
+
+    <form
+      action="/server"
+      method="get"
+      id="form1"
+      novalidate
+      autocomplete="off"
+    >
       <ul>
         <li>
           <label for="userId">아이디 :</label>
-          <input type="text" placeholder="아이디를 입력하세요." id="userId" />
+          <input
+            type="text"
+            placeholder="아이디를 입력하세요."
+            id="userId"
+            required
+          />
           <!-- disabled -->
+        </li>
+        <li>
+          <label>
+            이메일 :
+            <input type="email" />
+          </label>
         </li>
         <li>
           비밀번호 :
@@ -71,19 +101,24 @@
             <input type="radio" name="marketing" value="2" />
           </label>
         </li>
-
-        <!--
-              <form> : 서버에 작성한 양식(데이터)을 보낼 때 사용. 
-                  => <form> 안에 <button> 클릭시 자동으로 동작.
-              action : 데이터에 전송할 서버를 지정.
-                  => <form 안에서 enter 키 입력 시 sumit(전송)
-              method : 데이터 전송 방법을 지정.
-                  => get은 정보 받아올 때 사용. 주소창에 input 값 노출. 노출돼도 상관없는 정보만 나와야한다.
-                  => post 서버에 데이터를 등록할 때 사용. 주소창에 데이터 노출 X
-          -->
+        <li>
+          <label>
+            도시 :
+            <select name="city" id="">
+              <option value="seoul">서울특별시</option>
+              <option value="incheon">인천광역시</option>
+              <option value="">경기도</option>
+              <option value="">강원도</option>
+            </select>
+          </label>
+        </li>
       </ul>
       <button type="summit">전송</button>
       <button type="reset">초기화</button>
     </form>
+
+    <!-- <button>의 form 속성을 통해서 <form> 밖에서 제어할 수 있다. -->
+    <p>amsdlkfjslkfj;lakjdf;akjf;lkaj;flkj;lk</p>
+    <button type="summit" form="form1">전송</button>
   </body>
 </html>
