--- a/2.css/4. font.html
+++ b/2.css/4. font.html
@@ -16,5 +16,6 @@
       span태그는 인라인 요소입니다. 인라인 요소에서 가운데 정렬은 안됨.
       블록자체가 없어서 정렬할게 없음
     </span>
+    <div class="lineBox">요소</div>
   </body>
 </html>
