--- a/4.js/index.html
+++ b/4.js/index.html
@@ -12,6 +12,6 @@
     <script>
       //   console.log('Hello JavaScript!')
     </script>
-    <script src="./1.variavble.js"></script>
+    <script src="/4.js/5.loop.js"></script>
   </body>
 </html>
