--- a/2.css/7.background.html
+++ b/2.css/7.background.html
@@ -31,7 +31,7 @@
       doloremque deserunt dolorem qui saepe nostrum hic. Culpa necessitatibus
       alias ratione blanditiis animi, nulla ipsa aliquam ipsum itaque veniam. Ab
       dolor culpa error iusto ipsa rem ducimus laborum itaque inventore
-      explicabo, deserunt, aut in nesciunt sunt.
+      explicabo, deserunt, aut in nesciunt sunt
     </div>
     <div class="container02"></div>
   </body>
