--- a/TEST/test.html
+++ b/TEST/test.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="/TEST/test.css" />
-    <script src="/TEST/test.js"></script>
+    <script src="/TEST/test.js" defer></script>
   </head>
   <body>
     <header id="header">
@@ -28,18 +27,18 @@
         </nav>
       </div>
     </header>
-    <main id="main">
-      <div class="container1">
-        <div class="box1">1</div>
-        <div class="box2">2</div>
-        <div class="box3">3</div>
+    <main>
+      <div class="main">
+        <div class="container1">
+          <div class="box">1</div>
+          <div class="box">2</div>
+          <div class="box">3</div>
+        </div>
       </div>
       <div class="container2">
-        <ul id="button">
-          <li><button>1</button></li>
-          <li><button>2</button></li>
-          <li><button>3</button></li>
-        </ul>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
       </div>
       <div class="container3">
         <ul>
