--- a/4.js/index.html
+++ b/4.js/index.html
@@ -5,13 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- <script src="https://cdn.jsdeliver."></script> -->
+    <script src="/4.js/15.1.practice.api.js" defer></script>
   </head>
   <body>
-    <h1>Hello JavaScript</h1>
-    <!-- script태그 안에 JS코드를 작성. -->
-    <script>
-      //   console.log('Hello JavaScript!')
-    </script>
-    <script src="/4.js/5.loop.js"></script>
-  </body>
+    <form id="signUpForm">
+      <table>
+        <tr>
+          <th><label for="userId">ID</label></th>
+          <td><input type="text" id="userId" name="userId" /></td>
+        </tr>
+        <tr>
+          <th><label for="userId">Email</label></th>
+          <td><input type="text" id="userId" name="email" /></td>
+        </tr>
+        <tr>
+          <th><label for="">Password</label></th>
+          <td><input type="password" name="password" /></td>
+        </tr>
+      </table>
+      <button id="signUp">회원가입</button>
+    </form>
+
+    <form id="signInForm">
+      <table>
+        <tr>
+          <th>email</th>
+          <td><input type="email" name="email"></td>
+        </tr>
+        <tr>
+          <th>password</th>
+          <td><input type="password" name="password"></td>
+        </tr>
+     
+      </table>
+      <button>로그인</button>
+    </form>
+    
 </html>
